--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "emeralds_js",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^5.3.1"
-  },
-  "dependencies": {
-    "@arcgis/core": "^4.30.8"
-  }
+    "name": "emeralds_js",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "devDependencies": {
+        "vite": "^5.3.1"
+    },
+    "dependencies": {
+        "@arcgis/core": "^4.30.8",
+        "@arcgis/map-components": "^4.30.5"
+    }
 }
