--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     },
     "dependencies": {
         "@arcgis/core": "^4.30.8",
-        "@arcgis/map-components": "^4.30.5"
+        "@arcgis/map-components": "^4.30.5",
+        "@arcgis/map-components-react": "^4.30.5",
+        "@vitejs/plugin-react": "^4.3.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
