--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@arcgis/map-components-react": "^4.30.5",
         "@vitejs/plugin-react": "^4.3.1",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.2.1"
     }
 }
