--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@vitejs/plugin-react": "^4.3.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.2.1",
         "react-select": "^5.8.0"
     }
 }
